fixed alignment issue in collaboration section

--- a/frontend/src/routes/Home/collaboration/collaborationCard.css
+++ b/frontend/src/routes/Home/collaboration/collaborationCard.css
@@ -4,6 +4,10 @@
 
 }
 
+.collaborationContainer .collaborationCard{
+    text-align: center;
+}
+
 .collaborationContainer .collaborationCard .image{
     width: 150px;
     height: 150px;
